# myengine

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  rebuild.bat  run.bat  setup.bat
app/: CMakeLists.txt
app/src/: main.cpp
app/src/states/: GameplayState.cpp  GameplayState.h  LoadingState.cpp  LoadingState.h  MenuState.cpp  MenuState.h
assets/manifests/: demo_assets.json
assets/materials/: africanhead.material.json  cool.material.json  default.material.json  warm.material.json
assets/scenes/: scene  scene.json
assets/shaders/: primitive.hlsl  textured_lit.hlsl  textured_lit.shader.json
cmake/: CompilerOptions.cmake  CopyRuntimeAssets.cmake
config/: app.json
engine/: CMakeLists.txt
engine/include/myengine/config/: AppConfig.h
engine/include/myengine/core/: Application.h  Logger.h  Timer.h  Types.h  Window.h
engine/include/myengine/ecs/: Component.h  Entity.h  Registry.h  System.h  World.h
engine/include/myengine/ecs/components/: CameraComponent.h  CameraControllerComponent.h  HierarchyComponent.h  MeshRendererComponent.h  MotionComponent.h  TagComponent.h  TransformComponent.h  Vector3.h  WindowBindingComponent.h
engine/include/myengine/ecs/systems/: CameraControlSystem.h  MotionSystem.h  RenderSystem.h
engine/include/myengine/input/: InputManager.h
engine/include/myengine/render/: IRenderAdapter.h  RenderTypes.h
engine/include/myengine/render/dx12/: Dx12Context.h  Dx12RenderAdapter.h
engine/include/myengine/resource/: ResourceManager.h
engine/include/myengine/scene/: SceneSerializer.h  TestPrimitive.h
engine/include/myengine/spatial/: UniformGrid2D.h
engine/include/myengine/state/: IGameState.h  StateMachine.h
engine/src/config/: AppConfig.cpp
engine/src/core/: Application.cpp  Logger.cpp  Timer.cpp  Window.cpp
engine/src/ecs/: World.cpp
engine/src/ecs/systems/: CameraControlSystem.cpp  MotionSystem.cpp  RenderSystem.cpp
engine/src/input/: InputManager.cpp
engine/src/render/dx12/: Dx12RenderAdapter.cpp
engine/src/resource/: ResourceManager.cpp
engine/src/scene/: SceneSerializer.cpp
engine/src/state/: StateMachine.cpp
